--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "pan",
+  "name": "fanyi_baidu",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.2.0",
   "type": "module",
   "author": {
     "name": "Hunlongyu",
     "email": "hunlongyu@gmail.com"
   },
-  "description": "table test",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -21,8 +20,5 @@
     "eslint-plugin-promise": "^6.0.0",
     "vite": "^5.0.11",
     "vite-plugin-monkey": "^3.5.1"
-  },
-  "dependencies": {
-    "unplugin-auto-import": "^0.17.3"
   }
 }
