--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fanyi_baidu",
+  "name": "fanyi_online",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "author": {
     "name": "Hunlongyu",
