--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fanyi_online",
+  "name": "coze",
   "private": true,
-  "version": "0.2.1",
+  "version": "0.8.3",
   "type": "module",
   "author": {
     "name": "Hunlongyu",
