--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weiyun",
+  "name": "coze",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.8.3",
   "type": "module",
   "author": {
     "name": "Hunlongyu",
